--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-time-machine
 # Name of your site (displayed in the header)
-name: About Timo Rößner
+title: About Timo Rößner
 
 # Short bio or description (displayed in the header)
 description: I'm doing something with engineering. I guess.
