--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ theme: jekyll-theme-time-machine
 title: About Timo Rößner
 
 # Short bio or description (displayed in the header)
-description: Former developer turned manager, wannabe mathematician & 737 pilot.
+description: Seasoned engineering leader and software developer
